<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Cruso Android</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_hint_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_selecione_um_curso">Selecione um curso</string>
</resources>